# Multipass-project

./: README.md  Technical requirements.md
multipass/: CMakeLists.txt
multipass/inc/: IReleaseInfo.hpp  ReleaseInfoAMD64.hpp  jsondownloader.hpp  jsonparser.hpp
multipass/src/: ReleaseInfoAMD64.cpp  jsondownloader.cpp  jsonparser.cpp  multipass.cpp
